JumpScript/tests/baselines/reference/topLevelFileModuleMissing.errors.txt
tests/cases/conformance/externalModules/foo_1.jump(1,22): error TS2307: Cannot find module 'vs/foo'.


==== tests/cases/conformance/externalModules/foo_1.jump (1 errors) ====
    import foo = require("vs/foo");
                         ~~~~~~~~
!!! error TS2307: Cannot find module 'vs/foo'.
    var z = foo.x + 10;
    
==== tests/cases/conformance/externalModules/vs/foo_0.jump (0 errors) ====
    export var x: number;
    